fix whitespace complaints

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -287,22 +287,27 @@ select {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 20px;
+    width: 200px;
+    height: 29px;
+    background-color: #00ae83;
     border-radius: 10px;
+    overflow: hidden;
     z-index: 9999;
- }
+  }
   
 .progress-bar {
-    height: 20px;
-    background-color: #4caf50;
-    margin-bottom: 10px;
+    height: 100%;
+    background-color: #4caf50 !important;
+    transition: width 0.5s ease;
   }
   
 .progress-text {
-    display: block;
-    text-align: center;
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    transform: translateY(-50%);
+    color: white;
+    font-weight: bold;
   }
 
 .text-success-connect {
